exports[`Categories Should create category description object 1`] = `
Object {
  "dateFormat": "MM-YYYY",
  "name": "Section One",
}
`;

exports[`Entitie should match snapshoted object 1`] = `
Object {
  "content": "<p>My role was to convert given design project into a Wordpress custom theme. To meet requirements I had to implement custom plugins both in back-end and client side.</p>
",
  "end": 1492725600000,
  "layout": "position",
  "name": "first-position",
  "start": 1490050800000,
  "tags": Array [
    "Wordpress",
    "Timber",
    "SASS",
    "ES6",
  ],
  "url": "url",
}
`;

exports[`Traverse directories tree should match snapshot 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": "",
          "entity": "category-descriptor.md",
          "name": "Section One",
        },
        Object {
          "content": "<p>My role was to convert given design project into a Wordpress custom theme. To meet requirements I had to implement custom plugins both in back-end and client side.</p>
",
          "end": 1492725600000,
          "entity": "03212017_section.md",
          "layout": "position",
          "name": "first-position",
          "start": 1490050800000,
          "tags": Array [
            "Wordpress",
            "Timber",
            "SASS",
            "ES6",
          ],
          "url": "url",
        },
        Object {
          "content": "<p>My role was to convert given design project into a Wordpress custom theme. To meet requirements I had to implement custom plugins both in back-end and client side.</p>
",
          "entity": "03212016_section.md",
          "layout": "position",
          "name": "second-position",
          "tags": Array [
            "Wordpress",
            "Timber",
            "SASS",
            "ES6",
          ],
          "url": "url",
        },
      ],
      "entity": "section-one",
    },
  ],
  "entity": "section",
}
`;
